# llvm2cpg

./: .gitmodules  CMakeLists.txt  README.md
build-system/: build-system.cmake
ci/: ubuntu-playbook.yaml
ci/helpers/: build-and-test.yaml  install-joern.yaml  install-libzip.yaml  install-sbt.yaml  run-tests.yaml  variables.yaml
lib/CPG/: CPGOperatorNames.cpp
lib/Demangler/: Demangler.cpp
lib/LLVMExt/: TypeEquality.cpp
lib/ProtoWriter/: CMakeLists.txt  CPGEmitter.cpp
lib/Transforms/: Transforms.cpp
